--- a/CRUD/src/app/pages/departments/departments.component.html
+++ b/CRUD/src/app/pages/departments/departments.component.html
@@ -132,4 +132,16 @@
     </div>
 
     <p> {{message}}</p>
+    <form (ngSubmit)="onSubmit()">
+        <div>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" [(ngModel)]="model.name" required>
+        </div>
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" [(ngModel)]="model.email" required>
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+
 </section>
