--- a/CRUD/src/app/pages/departments/departments.component.html
+++ b/CRUD/src/app/pages/departments/departments.component.html
@@ -135,13 +135,19 @@
     <form (ngSubmit)="onSubmit()">
         <div>
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" [(ngModel)]="model.name" required>
+            <input type="text" id="name" name="name" required>
         </div>
         <div>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" [(ngModel)]="model.email" required>
+            <input type="email" id="email" name="email" required>
         </div>
         <button type="submit">Submit</button>
     </form>
+
+    <button (click)="updateItems()">Add Item</button>
+
+    <ul>
+        <li *ngFor="let item of items; trackBy: trackByItemId">{{ item.name }}</li>
+    </ul>
 
 </section>
