Practice on Renderer2

--- a/CRUD/src/app/pages/departments/departments.component.html
+++ b/CRUD/src/app/pages/departments/departments.component.html
@@ -150,4 +150,7 @@
         <li *ngFor="let item of items; trackBy: trackByItemId">{{ item.name }}</li>
     </ul>
 
+    <div #container></div>
+    <button (click)="addElement()">Add Element</button>
+
 </section>
